css/style.css
/* ... */
.stickyindex div:nth-of-type(36) a:hover::after {
	content: 'Thanks.wav';
	margin-left: 1em;
}

/* composition 01 ~~> .item_1 */

div.item_1 {
	grid-template-rows: 70vh auto;
	grid-template-columns: 300px 1000px 300px;
	display: grid;
}

div.item_1 .container {
	margin: 0 auto;
	align-self: center;
	height: 100%;
	margin-top: 10%;
	width: 100vh;
	--n: 4;
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
	grid-column: 1/4;
}

div.item_1 .container video {
	max-width: 900px;
	width: 100%;
	height: auto;
}

div.item_1 .container .videocontainer {
	display: inline-grid;
	width: 100%;
}

div.item_1 .container button {
	cursor: pointer;
}

div.item_1 .container button:hover,
div.item_6 button:hover {
	background-color: var(--green-color);
}

div.item_1 .container .vidbutt {
	top: 4em;
	position: absolute;
	display: block;
	right: 26.5em;
	z-index: 99;
}

div.item_1 .container button,
div.item_6 div button,
.audio-player {
	background-color: white;
	border-color: var(--green-color);
	color: var(--darkgreen-color);
	margin-bottom: 0.25em;
}

div.item_1 .container button:nth-child(1) {
	border-right: dotted;
	transform: translateX(4px);
}

div.item_1 .container button:nth-child(2) {
	border-left: none;
}

div.item_1 .container button:nth-of-type(3),
div.item_6 div button,
.audio-player .controls .audio-icon button {
	display: inline-flex;
	flex-direction: row;
	align-content: center;
	align-items: center;
}

div.item_1 .container button:nth-of-type(3) i,
div.item_6 div button i,
.audio-player .controls .audio-icon button i {
	line-height: 0;
	font-size: 1.25em;
}

div.item_1 #upload {
}

div.item_1 img {
	grid-row: 2;
	height: auto;
	width: auto;
}

div.item_1 img:first-of-type {
	grid-column: 1 /2;
	justify-self: end;
	margin-top: -2em;
}

div.item_1 img + img {
	grid-column: 2 /3;
}

/* composition 02 ~~> .item_2 */

div.item_2,
div.item_2 span,
div.item_3,
div.item_4,
div.item_5,
div.item_9 {
	display: flex;
	flex-direction: row;
}

div.item_2 span {
	height: auto;
	align-items: center;
	margin: 0 12% 0 4em;
}

div.item_2 span img,
div.item_3 img:nth-of-type(4),
div.item_7 div.page-wrapper,
div.item_8 a img {
	border: 1px outset rgba(207, 207, 207, 0.336);
}

div.item_2 span img:nth-of-type(1) {
	z-index: 3;
}

div.item_2 span img:nth-of-type(2) {
	z-index: 2;
}

div.item_2 span img + img {
	margin-left: -125px;
}

div.item_2 span img:hover,
div.item_3 img:nth-of-type(4):hover,
div.item_7 div.page-wrapper:hover,
div.item_8 a img:hover {
	z-index: 4;
	box-shadow: var(--green-shadow);
	transition: 0.175s linear;
}

div.item_2 span + img {
	height: 100%;
	width: auto;
	padding: 1em 0;
}

/* composition 03 ~~> .item_3 */
div.item_3,
div.item_4,
div.item_5,
.item_9 {
	align-items: center;
}

/* div.item_3 img:nth-of-type(4):hover {
		box-shadow: var(--green-shadow);
	transition: 0.175s linear;
} */
div.item_3 {
	margin-right: 25%;
}

div.item_3 img:nth-of-type(2) {
	margin-left: -4em;
}

div.item_3 img:nth-of-type(2),
div.item_3 img:nth-of-type(3) {
	height: 100%;
	padding: 0.25em 0;
}

div.item_3 img:nth-of-type(4) {
	margin: 0 13.5%;
}

/* composition 04 ~~> .item_4 */
div.item_4 {
	margin-right: 10%;
}

/* composition 05 ~~> .item_5 */
div.item_5 img:nth-of-type(1),
div.item_5 img:nth-of-type(2),
div.item_5 img:nth-of-type(3) {
	height: 100%;
	padding: 0.25em 0;
}

div.item_5 div.container2 {
	display: inline-flex;
	flex-direction: column;
}

/* composition 06 ~~> .item_6 */
div.item_6 {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	margin-right: 5%;
}

div.item_6 div {
	display: inline-flex;
	width: 100%;
	justify-content: flex-end;
}

div.item_6 img {
	width: fit-content;
	height: 10%;
}

/* composition 07 ~~> .item_7 */

div.item_7 {
	display: flex;
	flex-direction: row;
	/* justify-content: flex-end;
  align-items: flex-end; */
}

div.item_7 div {
	display: flex;
	flex-direction: column;
	align-items: flex-end;
	justify-content: flex-end;
}

div.item_7 div.flipbook-viewport {
	padding: 1em;
}

div.item_7 div.flipbook-viewport + img {
	transform: translateX(-1.5em);
	margin-bottom: 6em;
}

div.item_7 img.kid-cry-img {
	height: auto;
	align-self: baseline;
	margin: 18% 15% 15% 10%;
}

/* draggable */
/* div.item_8 a img:hover {
box-shadow: var(--green-shadow);
} */

.goatdrag {
	width: 100%;
	display: grid;
	grid-template-columns: repeat(2, auto);
	justify-content: center;
	align-items: center;
	padding: 3em 0;
}

.goatdrag:nth-child(-n + 3) {
	grid-column: 1;
}

.goatdrag a {
	grid-row: 1/4;
	margin-left: -3em;
	z-index: 6;
}

#draggable {
	width: 20em;
	height: 20em;
}

.goat_img {
	background-image: url('../assets/img/7232/goat2_0.png');
	width: 20em;
	height: 20em;
	background-size: contain;
	position: absolute;
	cursor: crosshair
}

.goat_img:hover {
	z-index: 5;
	filter: drop-shadow(1px 3px 3px rgba(51, 255, 0, 0.12))
		drop-shadow(1px 3px 3px rgba(14, 30, 37, 0.32));
	filter: drop-shadow(2px 2px 0px rgba(51, 255, 0, 0.12))
		drop-shadow(2px 2px 1px rgba(14, 30, 37, 0.32));
	filter: drop-shadow(1px -3px -3px rgba(51, 255, 0, 0.12))
		drop-shadow(1px -3px -3px rgba(14, 30, 37, 0.48));
}

/* composition 09 ~~> .item_9 */
div.item_9 img {
	margin: 0 1em;
}

div.item_9 img:nth-child(3) {
	margin-right: 12vw;
}

/* endless scroll single container */
#endlessscroll {
	max-height: 50em;
	overflow-y: auto;
}

#endlessscroll ul {
	list-style-type: none;
	padding: 0;
	margin: 0;
}

#endlessscroll li {
	height: 100%;
}

#endlessscroll img {
	padding: 0;
}

/* fullscreen scroll styling, composition 4 ~~> .item_4*/
#fsglitch {
	top: 0px;
	left: 0em;
	z-index: 3;
	position: relative;
	flex-shrink: 0;
	display: flex;
	flex-direction: row;
}

#fsglitch img {
	transition: 1.5s ease-in-out;
}

#fsglitch:hover img {
	transform: scale(1.95) translateY(0%);
	border: 2px solid white;
}
/* ... */

